overflowX and padding fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+html {
+    overflow-x: hidden;
+}
 body {
     position: relative;
     min-height: 100vh;
     padding-bottom: 54px;
+    overflow-x: hidden;
 }
 
 p {
