--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -132,5 +132,6 @@
     }
     .account-form {
         width: 100%;
+        padding: 15px;
     }
 }
